fixes 6 amélioration de l'affichage des stats et des activités + accueil : mise en place collapse

--- a/css/main.css
+++ b/css/main.css
@@ -30,3 +30,7 @@
 .perso_text {
     font-size: 0.8rem;
 }
+
+.perso_row {
+    height: 1.6rem;
+}
